# realman_teleop

./: README.md  __init__.py  app.py  appcfg.yaml  log.py  mapp.txt  pyproject.toml  version.py  使用说明.md
bgtask/: dexhand.py  listener.py  realman_arm.py  runner.py  spacemouse.py  teleop.py
core/: setting_manager.py  shared.py
core/arm/: calc.py  realman.py
core/end_effector/: dexhand.py  gripper.py
core/end_effector/common/: robotic_arm.py  roh_registers_v0.py  roh_registers_v2.py
core/spacemouse/: __init__.py  btn_detector.py  handler.py  listener.py
http_client/: app.py  appcfg.yaml
http_server/: .gitignore  app.py  appcfg.yaml  util.py
http_server/bgtask/: dexhand.py  realman_arm.py  runner.py  spacemouse.py
http_server/ui/: form.ui
resources/: prepare_realman_teleop_app.bat  requirements.txt  start_realman_teleop_app.bat
scripts/: encrypt.sh  run_teleop_server.sh
ui/: form.ui
