[project]
name = "realman-teleop"
dynamic = ["version"]
authors = [{name = "wel2018", email = "kwei2021@foxmail.com"}]
description = "-"
dependencies = [
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["realman_teleop"]  

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true

[tool.hatch.version]
source = "code"
path = "version.py"
variable = "version"
